# Chess_Engine

./: .gitignore  CMakeLists.txt  README.md
lib/SFML/doc/: SFML.tag
lib/SFML/doc/html/: AlResource_8hpp_source.html  Angle_8hpp.html  Angle_8hpp_source.html  AudioResource_8hpp.html  AudioResource_8hpp_source.html  Audio_2Export_8hpp.html  Audio_2Export_8hpp_source.html  Audio_8hpp.html  Audio_8hpp_source.html  BlendMode_8hpp.html  BlendMode_8hpp_source.html  CircleShape_8hpp.html  CircleShape_8hpp_source.html  Clipboard_8hpp.html  Clipboard_8hpp_source.html  Clock_8hpp.html  Clock_8hpp_source.html  Color_8hpp.html  Color_8hpp_source.html  Config_8hpp.html  Config_8hpp_source.html  ContextSettings_8hpp.html  ContextSettings_8hpp_source.html  Context_8hpp.html  Context_8hpp_source.html  ConvexShape_8hpp.html  ConvexShape_8hpp_source.html  CoordinateType_8hpp.html  CoordinateType_8hpp_source.html  Cursor_8hpp.html  Cursor_8hpp_source.html  Drawable_8hpp.html  Drawable_8hpp_source.html  Err_8hpp.html  Err_8hpp_source.html  Event_8hpp.html  Event_8hpp_source.html  Exception_8hpp.html  Exception_8hpp_source.html  FileInputStream_8hpp.html  (+577 more)
lib/SFML/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_12.js  (+124 more)
lib/SFML/examples/: asset_licenses.md
lib/SFML/examples/assets/: LaunchScreen.storyboard  icon.icns  info.plist
lib/SFML/examples/event_handling/: EventHandling.cpp
lib/SFML/examples/ftp/: Ftp.cpp
lib/SFML/examples/island/: Island.cpp
lib/SFML/examples/joystick/: Joystick.cpp
lib/SFML/examples/keyboard/: Keyboard.cpp
lib/SFML/examples/opengl/: OpenGL.cpp
lib/SFML/examples/raw_input/: RawInput.cpp
lib/SFML/examples/shader/: Shader.cpp
lib/SFML/examples/sockets/: Sockets.cpp  TCP.cpp  UDP.cpp
lib/SFML/examples/sound/: Sound.cpp
lib/SFML/examples/sound_capture/: SoundCapture.cpp
lib/SFML/examples/sound_effects/: SoundEffects.cpp
lib/SFML/examples/stencil/: Stencil.cpp
lib/SFML/examples/tennis/: Tennis.cpp
lib/SFML/examples/voip/: Client.cpp  Server.cpp  VoIP.cpp
lib/SFML/examples/vulkan/: Vulkan.cpp
lib/SFML/examples/win32/: Win32.cpp
lib/SFML/examples/window/: Window.cpp
lib/SFML/include/SFML/: Audio.hpp  Config.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
lib/SFML/lib/: FLAC.lib  FLACd.lib  freetype.lib  freetyped.lib  ogg.lib  oggd.lib  sfml-audio-d.lib  sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics-s-d.lib  sfml-graphics-s.lib  sfml-graphics.lib  sfml-main-s-d.lib  sfml-main-s.lib  sfml-network-d.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s-d.lib  sfml-window-s.lib  sfml-window.lib  vorbis.lib  vorbisd.lib  vorbisenc.lib  vorbisencd.lib  vorbisfile.lib  vorbisfiled.lib
src/: AssetManager.cpp  AssetManager.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  Game.cpp  Game.h  GamePlayState.cpp  MainMenuState.cpp  MainMenuState.h  State.h  StateManager.cpp  StateManager.h  main.cpp
src/core/: Game.cpp  Game.h  GameObject.h  UIComponent.h
src/core/events/: Event.h  EventDispatcher.cpp  EventDispatcher.h
src/core/game/: Board.cpp  Board.h  BoardGeometry.cpp  BoardGeometry.h  BoardUtilities.h  GameStatusManager.cpp  GameStatusManager.h  MoveHistory.cpp  MoveHistory.h  MoveHistoryGeometry.cpp  MoveHistoryGeometry.h  Piece.cpp  Piece.h  PromotionPanel.cpp  PromotionPanel.h
src/core/log/: Logger.cpp  Logger.hpp
src/core/managers/: AssetManager.cpp  AssetManager.h  InputManager.cpp  InputManager.h
src/core/states/: GamePlayState.cpp  GamePlayState.h  MainMenuState.cpp  MainMenuState.h  State.h  StateForward.h  StateManager.cpp  StateManager.h
src/core/ui/: Button.cpp  Button.h
(+119 files in other folders)
